--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     
     <head>
@@ -67,7 +67,7 @@
 
             <div class="wraper">
                 <div class="description">
-<p>My name is Hong; I am currently freelancing in England. </p>
+<p>My name is Hong; I am currently Frontend developer in ZPG. </p>
 <p>I enjoy creating website and using some of my spare time to improve my skills. </p>
 <br/>    
 <p>When I am not working, I would normally go jogging, reading or computer gaming.
