--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <h1>hong wong</h1>
 
-            <h4>Here you will learn about me, my works and the skills I have </h4>
+            <h4>Here you will learn about myself, the works and skills I have </h4>
 
             <div id="scrollDown">
                 <a href="#about" class="button"> Find out more</a>
@@ -68,7 +68,8 @@
 
         <div class="wraper">
             <div class="description">
-                <p>My name is Hong; I am currently working as Frontend developer in ZPG. </p>
+                <p>My name is Hong; I am currently working as Frontend developer at ZPG.</p>
+                <br/>
                 <p>I enjoy creating website and using some of my spare time to improve my skills. </p>
                 <br />
                 <p>
@@ -76,13 +77,12 @@
                 </p>
             </div>
             <ul class="titles">
-                <li>Html5</li>
+                <li>HTML5</li>
                 <li>CSS3</li>
                 <li>JavaScript</li>
                 <li>JQuery</li>
                 <li>React</li>
                 <li>Angular</li>
-
                 <li>Photoshop</li>
                 <li>Illustrato</li>
                 <li>PHP</li>
