--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <script src="js/lightbox.js"></script>
 
     <!--mobile navbar -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="js/jquery.slicknav.js"></script>
 
     <script src="js/main.js"></script>
