--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </div>
     </section><!--end of work-->
 
-
+    <!--
     <section id="contact">
 
         <h2> Contact me</h2>
@@ -308,7 +308,7 @@
             <input type="email" name="email" placeholder="Email" required />
             <textarea name="message" placeholder="Message" required></textarea>
 
-            <!-- The following field is for robots only, invisible to humans: -->
+            The following field is for robots only, invisible to humans:
             <input type="text" name="robot" placeholder="Leave this blank" id="robot" />
 
 
@@ -317,7 +317,7 @@
             </div>
         </form>
 
-    </section><!--end of contact-->
+    </section>--><!--end of contact-->
 
     <footer></footer>
 
