--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <li><a href="#work">works</a></li>
 
-            <li><a href="#contact">contact</a></li>
+            <!--<li><a href="#contact">contact</a></li>-->
 
         </ul>
 
