--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <div class="wraper">
             <div class="description">
-                <p>My name is Hong; I am currently working as Lead Frontend developer at ZPG.</p>
+                <p>My name is Hong; I am currently working as Frontend developer at ZPG.</p>
                 <br/>
                 <p>I enjoy creating website and using some of my spare time to improve my skills. </p>
                 <br />
@@ -104,9 +104,9 @@
 
             <div class="clear"></div>
 
-            <div id="CV">
+            <!--<div id="CV">
                 <a href="HongWongCV.pdf" class="button">Read my CV</a>
-            </div>
+            </div>-->
         </div>
     </section><!--end of about-->
 
