--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <div class="wraper">
             <div class="description">
-                <p>My name is Hong; I am currently working as Frontend developer at ITVET.</p>
+                <p>My name is Hong; I am currently working as Frontend developer at GFM Holdings Ltd.</p>
                 <br/>
                 <p>I enjoy creating website and using some of my spare time to improve my skills. </p>
                 <br />
@@ -116,6 +116,34 @@
         <div class="backdrop"></div>
         <div class="container">
             <div class="list">
+                <div class="galleryItem">
+                    <a href="box6" class="lightbox" title="Sky Sports Fantasy Football"><img src="images/smalls/sky.jpg" alt="Sky Sports Fantasy Football"></a>
+                    <p>Sky Sports Fantasy Football</p>
+                </div>
+
+
+                <div id="box6" class="box">
+                    <div class="close">x</div><a href="https://fantasyfootball.skysports.com/" target="_blank">
+                        <img src="images/sky.jpg" alt="Sky Sports Fantasy Football"> <p>Sky Sports Fantasy Football</p>
+                   
+                    <div class="mob"><p>Sky Sports Fantasy Football</p></div>
+                </div>
+
+                <!--end of motorbike logo-->
+
+                <div class="galleryItem">
+                    <a href="box5" class="lightbox" title="Break free holidays"><img src="images/smalls/breakFree.jpg" alt="Break free holidays"></a>
+                    <p>Break free holidays</p>
+                </div>
+
+                <div id="box5" class="box">
+                    <div class="close">x</div><a href="https://www.breakfreeholidays.co.uk/" target="_blank">
+                        <img src="images/breakFree.jpg" alt="Break free holidays"></a> <p>Break free holidays</p>
+                    <div class="mob"><p>Break free holidays</p></div>
+                </div>
+                
+                <!--end of pacific logo-->
+
                 <div class="galleryItem">
                     <a href="box14" class="lightbox" title="Template (Tetra)"><img src="images/smalls/tetra.jpg" alt="Template website Tetra"></a>
                     <p>Template (Tetra)</p>
@@ -198,34 +226,6 @@
                     <div class="mob"><p>Responsive website for The Perfectionists CafCaf&eacute;</p></div>
                 </div>
                 <!--end of perfectionists cafe-->
-
-                <div class="galleryItem">
-                    <a href="box6" class="lightbox" title="Motorbike magazine logo"><img src="images/smalls/bikeLogo.jpg" alt="Motorbike magazine logo"></a>
-                    <p>Two Wheels Rider logo design</p>
-                </div>
-
-
-                <div id="box6" class="box">
-                    <div class="close">x</div><img src="images/bikelogo.jpg" alt="Motorbike magazine logo"> <p>Logo design for a Hong Kong motorbike magazine</p>
-                    <div class="mob"><p>Hong Kong motorbike magazine logo design</p></div>
-                </div>
-
-                <!--end of motorbike logo-->
-
-
-                <div class="galleryItem">
-                    <a href="box5" class="lightbox" title="pacific consultant logo"><img src="images/smalls/pacific.jpg" alt="Consultant company logo"></a>
-                    <p>Pacific union logo design</p>
-                </div>
-
-
-                <div id="box5" class="box">
-                    <div class="close">x</div><img src="images/pacificlog.jpg" alt="Consultant company logo"><p>Logo design for a Hong Kong traveling consultant company</p>
-                    <div class="mob"><p>Traveling consultant company logo design</p></div>
-                </div>
-
-                <!--end of pacific logo-->
-
 
                 <div class="galleryItem">
                     <a href="box4" class="lightbox" title="Computer hardware icon"><img src="images/smalls/miniLogo.jpg" alt="Computer Icon"></a>
